Начал делать интерфейс

--- a/stardb-app/public/index.html
+++ b/stardb-app/public/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <noscript>Пожалуйста, включите JavaScript для корректной работы сайта.</noscript>
-    <div id="root"></div>
+    <div id="main"></div>
   </body>
 </html>
